fix: resolve all issues and apply improvements
- P1: Dynamic pagination in ProductTable (totalCount, pageSize, currentPage, yii\data\Pagination)
- P2: Remove duplicate CSS media query in dashboard.css
- P3: Fix Dropdown split mode class handling bug
- P4: Move dashboard-widget class to BaseWidget::init(), remove initDefaultOptions()
- P5: Create ChartAsset for Chart.js auto-registration
- P6: Fix test bootstrap with yii\web\Application instance
- P7: Fix composer.json URLs (iguazoft -> dannyrios81)
- P8: Replace inline HTML with MetricCard widget in example
- R5: Add 9 new test files (MetricCard, Card, Alert, DataTable, Badge, Sidebar, Pagination, Modal, Progress)
- R9: Add PHPDoc to all 40 widget classes
- R10: Clean up redundant markdown files
- R12: Integrate yii\data\Pagination in DataTable with dynamic pagination

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "charts",
         "iguazoft"
     ],
-    "homepage": "https://github.com/iguazoft/yii2-ui",
+    "homepage": "https://github.com/dannyrios81/yii2-ui",
     "license": "MIT",
     "authors": [
         {
@@ -29,9 +29,9 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/iguazoft/yii2-ui/issues",
-        "source": "https://github.com/iguazoft/yii2-ui",
-        "docs": "https://github.com/iguazoft/yii2-ui/blob/main/README.md"
+        "issues": "https://github.com/dannyrios81/yii2-ui/issues",
+        "source": "https://github.com/dannyrios81/yii2-ui",
+        "docs": "https://github.com/dannyrios81/yii2-ui/blob/main/README.md"
     },
     "require": {
         "php": ">=7.4.0",
